# redIDL

./: .gitignore  README.md  run
codegen/: README.md
codegen/cleanser/: Cargo.toml
codegen/cleanser/src/: main.rs
codegen/codegen/: Cargo.toml
codegen/codegen-lib/: Cargo.toml
codegen/codegen-lib/src/: lib.rs
codegen/codegen-macro/: Cargo.toml
codegen/codegen-macro/src/: lib.rs
codegen/codegen-old/cleanser/: test.rs
codegen/codegen-old/codegen-lib/: Cargo.toml
codegen/codegen-old/codegen-lib/src/: lib.rs
codegen/codegen-old/codegen-proc/src/: helper.rs
codegen/codegen-old/experiment/src/: main.rs
codegen/codegen-proc/: Cargo.toml
codegen/codegen-proc/src/: helper.rs  lib.rs  proxy.rs
codegen/codegen-proxy/: Cargo.toml  test.rs
codegen/codegen-proxy/src/: main.rs
codegen/experiment/: Cargo.toml
codegen/experiment/src/: main.rs
codegen/ngc/: Cargo.toml  README.md  rust-toolchain
codegen/ngc/.cargo/: config.toml
codegen/ngc/data/: generic.rs
codegen/ngc/src/: dependency_resolver.rs  domain_create.rs  domain_creation.rs  main.rs  module_tree.rs  path_refactoring.rs  proxy.rs  type_resolution.rs  type_resolver.rs  utils.rs
codegen/ngc/src/domain_create/: blob_domain_create.rs  linked_domain_create.rs  mod.rs
codegen/ngc/src/domain_entrypoint/: mod.rs
codegen/ngc/src/path_refactoring/: mod.rs  tests.rs
codegen/ngc/src/type_resolution/: README.md  dependency_resolver.rs  e2e_test.rs  mod.rs  module_tree.rs  rrefed_finder.rs  rrefed_finder_test.rs  symbol_tree.rs  type_info_finder.rs  type_resolver.rs  utils.rs
codegen/ngc/src/type_resolution/symbol_tree/: leftout.rs  mod.rs  module.rs  symbol_tree.rs  symbol_tree_node.rs
data/: test.ridl  test1.out.rs  test1.rs  test2.out.rs  test2.rs
hidl_macros/: Cargo.toml
hidl_macros/src/: lib.rs
hidl_traits/: Cargo.toml
hidlc/: Cargo.toml  foo.ridl
hidlc/src/: collect.rs  main.rs  verify.rs
idl_macros/: Cargo.toml
idl_macros/src/: lib.rs
idl_types/: Cargo.toml
idl_types/src/: exchangeable.rs  lib.rs  rrefable.rs
idlc/: .gitignore  Cargo.toml  foo.rs
idlc/idl/: example.rs
idlc/src/: _mod_map.rs  ir.rs  main.rs  mod_map.rs  sanity.rs
red_idl/: .gitignore  Cargo.toml  ast.txt  design.md  proof-graph.md
red_idl/macros/: Cargo.toml
red_idl/macros/src/: lib.rs
red_idl/samples/: sample.rs
red_idl/src/: main.rs  proof_graph.rs  prune.rs  reject.rs  types.rs  utility.rs  walk.rs
ridl/: Cargo.toml  design.txt  notes.txt  sf-test.idl
ridl/red_idl/: Cargo.toml
ridl/red_idl/macros/: Cargo.toml
ridl/red_idl/macros/src/: lib.rs
ridl/red_idl/markers/: Cargo.toml
ridl/red_idl/markers/src/: lib.rs
ridl/red_idl/src/: lib.rs  main.rs
ridl/reference/: proxies_in.rs  proxies_out.rs
ridl/src/: create_proxies.rs  creation_proxies.rs  error.rs  fn_check.rs  main.rs  proxies.rs  types.rs  usr_gen.rs  verify.rs
