[package]
name = "hidl_macros"
version = "0.1.0"
authors = ["David Detweiler <daviddetweiler1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = ""

[dependencies.syn]
version = ""
features = ["full"]
