[package]
name = "hidlc"
version = "0.1.0"
authors = ["David Detweiler <daviddetweiler1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = ""
hidl_macros = {path = "../hidl_macros"}

[dependencies.syn]
version = ""
features = ["full", "visit", "visit-mut", "extra-traits"]
