[package]
name = "codegen-proc"
version = "0.1.0"
authors = [
    "Tianjiao Huang <tianjih1@uci.edu>",
    "Mars Research Group <aburtsev@uci.edu>",
]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.13", feature = "full"}
quote = "1.0.2"
proc-macro2 = { version = "1.0", features = ["span-locations"] }