[package]
name = "codegen-proxy"
version = "0.1.0"
authors = [
    "Tianjiao Huang <tianjih1@uci.edu>",
    "Mars Research Group <aburtsev@uci.edu>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.48", features = ["full", "extra-traits"]}
quote = "1.0.7"