[package]
name = "ngc"
version = "0.1.0"
authors = ["Redleaf team <aburtsev@uci.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0" 
proc-macro2 = { version = "1.0.24", features = ["nightly"] }
clap = "2.33.3"
syn = { version = "1.0.58", features = ["full", "extra-traits", "parsing", "proc-macro"]}
quote = "1.0.7"
derivative = "2.2.0"
log = "0.4.0"
env_logger = "0.8.3"