[package]
name = "codegen-lib"
version = "0.1.0"
authors = ["Tianjiao Huang <git@tjhu.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We need this guy because "concat_idents is so fundamentally useles"
# https://github.com/rust-lang/rust/issues/29599#issuecomment-153927167
paste = "1.0" 
